adding frontend form

--- a/views/new-page.ejs
+++ b/views/new-page.ejs
@@ -1,17 +1,42 @@
-<div class="dark:text-gray-400">
-  <h1>Create New Entry</h1>
+<div style="justify-content: center; align-items: center; width: 100%;">
+  <div class="dark:text-gray-400">
+    <p style="font-size: 30px">Create New Entry</p>
 
-  <h6>Using Markdown</h6>
-
-  <form action="new-page" method="post">
-    <!-- {% csrf_token %} -->
+    <p style="font-size: 20px">Using Markdown</p>
     <br /><br />
-    <h5>Title entry</h5>
-    {{ form.TitleEntry }}
-    <br /><br />
-    <h5>Entry</h5>
-    {{ form.Entry }}
-    <br /><br />
-    <input type="submit" value="Save New Page" />
-  </form>
+    <form action="new-page" method="post">
+      <!-- {% csrf_token %} -->
+      <div class="mb-6">
+        <label
+          for="large-input"
+          class="block mb-4  text-2xl font-medium text-gray-900 dark:text-gray-300"
+          >Entry Title</label
+        >
+        <input
+          type="text"
+          id="small-input"
+          placeholder="Write Title Here ..."
+          class="block p-2 text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:text-xs focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+        />
+      </div>
+      <div class="mb-6">
+        <label
+          for="large-input"
+          class="block mb-4 text-2xl font-medium text-gray-900 dark:text-gray-300"
+          >Entry Content</label
+        >
+        <textarea
+          rows="6"
+          class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+          placeholder="Write Content Here..."
+        ></textarea>
+      </div>
+      <button
+        type="submit"
+        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
+      >
+        Add Entry
+      </button>
+    </form>
+  </div>
 </div>
