--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -18,6 +18,16 @@
     <link href="/css/style.css" rel="stylesheet" type="text/css" />
     
     <script>
+
+function getVal() {
+                const val = document.querySelector('input').value;
+                console.log(val);
+                const url = new URL(window.location);
+                url.searchParams.set('q', val);
+                window.history.pushState({}, '', url);
+                location.reload();
+
+              }
       function toggleMode() {
         var checkBox = document.getElementById("toggle-example");
         // Get the output text
@@ -33,9 +43,18 @@
           document.documentElement.classList.add("dark");
         }
       }
+
+      window.addEventListener('DOMContentLoaded', (event) => {
+    let input = document.querySelector(".search")
+        input.addEventListener('keyup', function(e){
+          alert(e.target.value)
+        })
+    });
     </script>
   </head>
   <body>
+
+
 
     <nav
       class="bg-white border-gray-200 px-2 sm:px-4 py-2.5  dark:bg-gray-800"
@@ -59,7 +78,14 @@
             <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
               <svg class="w-5 h-5 text-gray-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg>
             </div>
-            <input type="text" class="block p-2 pl-10 w-full text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:text-sm focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search...">
+              <!-- <input type="search" id="query" name="q"
+               placeholder="Search..."
+               aria-label="Search through site content"> -->
+
+            
+            <input type="text" name="q" id="query" onblur="getVal()" class="block p-2 pl-10 w-full text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:text-sm focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search...">
+
+
           </div>
           <button data-collapse-toggle="mobile-menu-3" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-3" aria-expanded="false">
           <span class="sr-only">Open main menu</span>
