--- a/views/entry.ejs
+++ b/views/entry.ejs
@@ -1,2 +1,5 @@
-<div class="text-2xl dark:text-gray-300 text-center mt-10"><%- content %></div>
-<a style="position: absolute; top: 10px;right: 10px;width:100px;text-align: center; font-size: 30px; text-decoration: none; color:white;background-color:#4578e4; " href="/">Back home</a>
+<div style="color: white"><%- content %></div>
+<div style="position: absolute; top: 10px; right: 10px">
+  <a class="button" href="/">Back home</a>
+  <!-- <a class="button" href="/edit/<%= title %> ">Edit Entry</a> -->
+</div>
