--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,13 @@
+<h1 class="header">
+   Welcome to WIKI where you can find and create encyclopedias
+</h1>
+add background image here
+
 <h1 class="text-2xl dark:text-white">All Pages</h1>
 
-
-
-
-<div style="margin-left:35px; margin-top: 20px;" >
-<ul class=" list-disc dark:text-gray-300 text-xl">
+<div class="p-4 grid grid-cols-4 gap-3" >
    <% for(let i=0; i<entries.length; i++) {%>
-      <li><a class="no-underline hover:underline ..." href="wiki/<%= entries[i] %>" ><%= entries[i] %></a></li>
+      <a class="item no-underline bg-gray-500 hover:bg-gray-600 " href="wiki/<%= entries[i] %>" ><%= entries[i] %></a>
    <% } %>
-</ul>
-   
-</div>
+ </div>
+
