--- a/views/layouts/layout2.ejs
+++ b/views/layouts/layout2.ejs
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= title %> </title>
+    <link href="/css/style.css" rel="stylesheet" type="text/css" />
+
+    <title><%= title %></title>
   </head>
   <body>
-    
     <div class="main"><%- body %></div>
   </body>
 </html>
