add and edit entry done

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -99,12 +99,12 @@ function getVal() {
             <a href="/" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white" aria-current="page">Home</a>
           </li>
           <li>
-            <a href="/new-page" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Create New Page</a>
+            <a href="/new-page" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white">Create New Page</a>
           </li>
           <li>
-            <a href="/random" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Random Page</a>
+            <a href="/random" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800x">Random Page</a>
           </li>
-          <li >
+          <!-- <li >
             <div
               class="flex items-center  text-base font-normal text-gray-900 dark:text-white "
             >
@@ -160,7 +160,7 @@ function getVal() {
                 >
               </div>
             </div>
-          </li>
+          </li> -->
         </ul>
       </div>
       </div>
