--- a/views/entry.ejs
+++ b/views/entry.ejs
@@ -1,5 +1,5 @@
 <div style="color: white"><%- content %></div>
 <div style="position: absolute; top: 10px; right: 10px">
+  <a class="button" href="/edit/<%= title %> ">Edit Entry</a>
   <a class="button" href="/">Back home</a>
-  <!-- <a class="button" href="/edit/<%= title %> ">Edit Entry</a> -->
 </div>
