--- a/views/new-page.ejs
+++ b/views/new-page.ejs
@@ -1,10 +1,10 @@
 <div style="justify-content: center; align-items: center; width: 100%">
   <div class="dark:text-gray-200">
-    <p style="font-size: 30px">Create New Entry</p>
+    <p style="font-size: 30px"><% if(isEdit) {%> Edit Entry <% }else{ %> Create New Entry <% } %></p>
 
     <p style="font-size: 20px">Using Markdown</p>
     <br />
-    <form action="new-page" method="post">
+    <form action="/new-page" method="post">
       <!-- {% csrf_token %} -->
       <div class="mb-6">
         <label
@@ -18,7 +18,7 @@
           id="small-input"
           placeholder="Write TitleHere ..."
           class="block p-2 text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:text-xs focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-          value="<% if(isEdit != false) {%> <%= name %> <% } %>"
+          value="<% if(isEdit != false){%><%= name %><% } %>"
         />
       </div>
       <div class="mb-6">
@@ -33,14 +33,60 @@
           class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
           placeholder="Write Content Here..."
         >
-<% if(isEdit != false) {%> <%= markDown %> <% } %></textarea
+<% if(isEdit != false) {%><%= markDown %><% } %></textarea
         >
       </div>
+
+      <% if(typeof alert != 'undefined') { %> <% alert.forEach(function(error) {
+      %>
+      <div
+        id="alert-2"
+        class="flex p-4 mb-4 bg-red-100 rounded-lg dark:bg-red-200"
+        role="alert"
+      >
+        <svg
+          class="flex-shrink-0 w-5 h-5 text-red-700 dark:text-red-800"
+          fill="currentColor"
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+        <div class="ml-3 text-sm font-medium text-red-700 dark:text-red-800">
+          <%= error.msg %>
+        </div>
+        <button
+          type="button"
+          class="ml-auto -mx-1.5 -my-1.5 bg-red-100 text-red-500 rounded-lg focus:ring-2 focus:ring-red-400 p-1.5 hover:bg-red-200 inline-flex h-8 w-8 dark:bg-red-200 dark:text-red-600 dark:hover:bg-red-300"
+          data-dismiss-target="#alert-2"
+          aria-label="Close"
+        >
+          <span class="sr-only">Close</span>
+          <svg
+            class="w-5 h-5"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </button>
+      </div>
+      <% }) %> <% } %>
+
       <button
         type="submit"
         class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
       >
-        Add Entry
+        <% if(isEdit) {%> Edit Entry <% }else{ %> Add Entry <% } %>
       </button>
     </form>
   </div>
